--- a/winsock-demo/.vscode/settings.json
+++ b/winsock-demo/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "ostream": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "system_error": "cpp"
     }
 }
